# mcp_mapped_resource_lib

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: INTEGRATION_GUIDE.md
examples/: fastmcp_example.py
src/mcp_mapped_resource_lib/: __init__.py  blob_id.py  cleanup.py  mime.py  path.py  storage.py
tests/: test_blob_id.py  test_cleanup.py  test_path.py  test_storage.py
